--- a/theartofdancinglife.html
+++ b/theartofdancinglife.html
@@ -34,80 +34,29 @@ who-its-for:
     image_focus: center
     overlay_style: dark
 inside-the-course:
-  heading: Inside Mana Movement
-  description_html: >-
-    <p>You have the flexibility to incorporate this program into your daily life. You may choose to engage with these modules every day or practice whenever inspiration strikes. The course is structured with 6 core modules and 4 supplementary modules. Each of the initial six modules delves into the intricacies of a segment within the Mana Movement Practice. Module 6 represents the comprehensive Mana Movement practice. The preceding five modules systematically break down each section. By progressing step by step, you can learn and embody these practices. By the time you reach Module 6, you will have already internalized all these movements, enabling a more profound exploration.</p><p>For optimal results, it is recommended to complete each module two to three times before advancing to the next one. This is your opportunity to fully embody these practices, allowing you to perform them effortlessly and immerse yourself in your unique experience. Upon completing the program, the aim is for you to autonomously practice without relying on the videos, as you will have developed a profound familiarity with the movements within your body.</p>
+  heading: Schedule
+  description_html: Each session will last between 2-3 hours. We recommend highly recommend being present for the entire duration to gain the most from the masterclass.</p>If you can’t join us live, you’ll have access to a replay for 7 days.
   module:
-    - title: Module 1, Embodied Arm Art
+    - title: Day 1 - Tuesday, November 19th
       description_html: >-
-        <p>PDF download, video lesson, video practice</p>
+        <p>The Healing Cycle, Unravelled</p>
+        <p>Safety - Letting Go - Love & Liberation &</p>
+        <p>Step 1: Cultivating Safety</p>
+        <p>Tuesday, November 19th<br>10am California / 7pm Central Europe</p>
       time:
-        show: true
+        show: false
         hours: 00
-        minutes: 24
-    - title: Module 2, Activating the Spinal Spiral
+        minutes: 00
+    - title: Day 2 - Wednesday, November 20th
       description_html: >-
-        <p>PDF download, video lesson, video practice</p>
+        <p>Step 2: Letting Go</p>
+        <p>Step 3: Love & Liberation &</p>
+        <p>THE ART OF DANCING LIFE Process</p>
+        <p>Wednesday, November 20th<br>10am California / 7pm Central Europe</p>
       time:
-        show: true
+        show: false
         hours: 00
-        minutes: 34
-    - title: Module 3, The Animal Body
-      description_html: >-
-        <p>PDF download, video lesson, video practice</p>
-      time:
-        show: true
-        hours: 00
-        minutes: 31
-    - title: Module 4, Kneeling to the Earth
-      description_html: >-
-        <p>PDF download, video lesson, video practice</p>
-      time:
-        show: true
-        hours: 00
-        minutes: 28
-    - title: Module 5, Bridging Earth & Sky
-      description_html: >-
-        <p>PDF download, video lesson, video practice</p>
-      time:
-        show: true
-        hours: 00
-        minutes: 38
-    - title: Module 6, Complete Mana Movement Practice
-      description_html: >-
-        <p>PDF download, video lesson, video practice</p>
-      time:
-        show: true
-        hours: 00
-        minutes: 57
-    - title: Module 7, Elemental Flow - Soften
-      description_html: >-
-        <p>PDF download, video lesson, video practice</p>
-      time:
-        show: true
-        hours: 00
-        minutes: 6
-    - title: Module 8, Elemental Flow - Strengthen
-      description_html: >-
-        <p>PDF download, video lesson, video practice</p>
-      time:
-        show: true
-        hours: 00
-        minutes: 5
-    - title: Module 9, Elemental Flow - Release
-      description_html: >-
-        <p>PDF download, video lesson, video practice</p>
-      time:
-        show: true
-        hours: 00
-        minutes: 8
-    - title: Module 10, Elemental Flow - Liberate
-      description_html: >-
-        <p>PDF download, video lesson, video practice</p>
-      time:
-        show: true
-        hours: 00
-        minutes: 8
+        minutes: 00
   background-image:
     background_image: /uploads/backgrounds/manamei-4.jpg
     image_focus: bottom
@@ -115,102 +64,29 @@ testimonials:
   background_image: /uploads/images/manamei-55.jpg
   overlay_style: dark
   testimonials:
-    - testimonial: ”I love it!! I've been searching for this movement my whole life.”
-      author:
+    - testimonial: ”Liberation Through Movement is life-changing! I feel much more energized.<br>I feel so much more truly AUTHENTIC.”
     - testimonial: >-
-        “I love the combo of movement, breathwork and meditation. Just what I
-        was looking for without knowing I needed it!”
-      author:
+        “It has been like a treasure map on how to create WHOLENESS within me day-by-day, allowing myself to BE what is alive within me…I have the compass in every moment to know what I need to come back to myself again. That’s what I want for me and for everyone on this planet to always know how to come back home.”
     - testimonial: >-
-        “I’m getting to know myself better with every morning MANA practice. I’m
-        becoming more confident and believe in myself. I'm showing myself to the
-        world in a more authentic way.”
-      author:
+        “Liberation Through Movement is a gift I received, and I am still receiving, that has no price… it is infinite wisdom and value.”
     - testimonial: >-
-        “I have only just begun this practice, but I feel it is opening up
-        something healing and powerful. I have realized I have not been feeling
-        or breathing properly because of trauma, and the simple act of
-        breathing, feeling and allowing my own energy to heal me is beautiful.”
-      author:
+        “I feel infinitely grateful to have received Liberation Through Movement teachings and practices. I will continue daily with these rituals for the days, weeks, and years to come, watching the magic unfold.”
     - testimonial: >-
-        “I love this course. It makes be feel relax all my muscles, peace and
-        calm.  It's great relaxation and exercise”
-      author:
-    - testimonial: “I feel much more energized and so much more TRULY authentic.”
-      author:
+        “I can say with confidence that this work changed my life.”
+    - testimonial: “Words are really hard to find to describe this work, this medicine, this ancient wisdom that is ignited within your body when you do this movement.”
     - testimonial: >-
         “This practice is truly amazing. The way I feel my body, the way I
         connect to it, the way I connect to my emotions and let them be.”
-      author:
-    - testimonial: “One class and I cant wait for a million more!”
-      author:
+    - testimonial: “The way i move changed. The way I speak changed.<br>The way I show up in the world changed.”
+    - testimonial: “I feel like there is such a new path opening up for me. A path of being TRULY WHO I AM and finding myself and staying true to myself.”
+    - testimonial: “I am more aware of how I hold my body and how I move in day to day life. I feel more present more often, in deeper communication with my Soul. Life is now more expansive, more abundant in opportunities, my creativity feels like it flipped a switch and now theres a flood of ideas and inspiration.”
+    - testimonial: “This beautiful new way of moving is connecting in with me fully, all of me, and allowing me to be present with the emotions, the expressions, the senses… allowing it to move through me and for me. To actually EMBRACE wholeheartedly all that it is. Embrace every aspect of me. The light, the pain, the joy, the fear, the love.”
 instructor:
-  show: true
-investment:
-  heading: Investment
-  includes:
-    heading: What's included
-    list:
-      - list-item: 10 guided video practices
-      - list-item: Written theory and journaling prompts
-      - list-item: Lifetime access to program materials
-      - list-item: Access to the private Mana Movement Facebook group
-  pricing:
-    pay-in-full:
-      heading: Pay in full
-      price: $200
-    payment-plan:
-      show: true
-      heading: Payment plan
-      price: $110 x 2 months
-  button: 
-    text: Enroll Now
-    url: https://manamei.teachable.com/p/mana-movement-sales
-  border: border-y border-feature
-faq:
-  heading: Frequently asked questions
-  questions-and-answers:
-    - question: I have a busy schedule. Can I take my time working through each module?
-      answer_html: >-
-        <p>YES! There is no strict timeline for this program, and upon purchase, you gain lifetime access to the material.</p>
-    - question: Are there prerequisites to take this program?
-      answer_html: >-
-        <p>NO. This program is open to any woman who is excited and ready to
-        dive into the movement medicine, regardless of your previous experience.
-        All women can benefit from this program, regardless of your age,
-        physical capacity, dance experience, or location in the world.</p>
-    - question: What is the difference between Wisdom Body and MANA Movement?
-      answer_html: >-
-        <p>MANA Movement is a guided practice which flows through sequences of
-        specific movement patterns that are focused on bringing non-linear
-        movement into the physical body, otherwise known as the Feminine
-        Pathways or circles, spirals, and waves.</p><p>MANA Movement is a great
-        place to start for those who are completely new to embodied dance and
-        want clear and specific guidance on how to move the body for more
-        freedom.</p><p>Wisdom Body will offer you the next level of freedom in
-        that there is no specific guided movements, but rather invitations for
-        you to discover your unique movement style through intentional prompts,
-        imagery, and somatic cues.</p><p class="mb-4">Wisdom Body is perfect for any woman
-        ready to deepen her movement practice and gain new inspiration for
-        increased freedom.</p><div class=”youtube-container”>
-          <div class='embed-container'><iframe src='https://www.youtube.com/embed/HIMIB96xwTY?si=zwu_oWHoCsTHYk1r frameborder='0' allowfullscreen></iframe></div></div>
-    - question: Will I receive a certificate at the end?
-      answer_html: >-
-        <p>Mana Movement is purely a personal deep dive experience so there is no
-        certification at completion. If you are interested in Mana Mei’s Level 1
-        Leadership and Facilitator Training, check out the <a class="hyperlink" href="/liberation-through-movement-mentorship.html">Liberation Through
-        Movement Mentorship</a> Program!</p>
-    - question: I don’t have a credit card. Is there any other way I can pay?
-      answer_html: >-
-        <p>Yes! We accept PayPal and Bank Transfers. Please contact Mana Mei to
-        request a new payment option.</p>
-  background-image:
-    background_image: /uploads/backgrounds/manamei-3.jpg
-    image_focus: bottom right
+  show: false
 cta:
-  heading: Initiation into the art of feminine embodiment 
+  heading: Enroll Now for $19 
   description_html: >-
-    <p>This is the perfect place to start your journey into full embodied liberation.</p><p>Throughout this course, you will be introduced to the Essential component of the MANA Movement Practice.</p><p>Each section of the practice is composed of simple, easy to follow movement patterns and exercises that will open the door into the vast world of intentional and intuitive dance as an every day ritual.</p><p>MANA Movement is focused on returning to the natural feminine paths of movement- circles, spirals, and waves. By returning to these innate movement patterns, we reestablish the natural, easy flow of energy through the body.</p><p>You will gain clarity, peace, and a renewed sense of inspiration.</p>
+    <p>Expand your mind, expand your Heart, and open you up to the incredible world and healing medicine of embodied movement.</p>
   button:
     text: Enroll now
     url: >-
@@ -243,14 +119,15 @@ seo:
 </section>
 
 <!-- What You'll Experience -->
-<section>
-
+<section class="">
+  <h2 class="font-serif text-[3rem] text-feature relative left-[5%] top-20">What you'll experience...</h2>
+  
   <!-- First Row -->
   <div class="grid grid-cols-2">
 
     <!-- Left Column (text) -->
     <div class="p-10p">
-      <h2 class="uppercase text-feature mb-4">Deepen your embodiment knowledge</h2>
+      <h3 class="uppercase text-feature mt-16 mb-4">Deepen your embodiment knowledge</h3>
       <p class="mb-0">The 3 Pillars of Connection (the Foundation of the Liberation Through Movement Modality)</p>
       <ul class="list">
         <li>Connection to the Physical Body</li>
@@ -304,7 +181,38 @@ seo:
 </section>
 
 <!-- Inside the Course -->
-{% include inside-the-course.html %}
+<section class="py-10p px-5p md:p-10p bg-image-style"
+    style="background-image: url('{{page.inside-the-course.background-image.background_image}}'); background-position: {{page.inside-the-course.background-image.image_focus}};">
+    <div class="text-center">
+        <h2 class="text-lg-serif text-feature">{{page.inside-the-course.heading}}</h2>
+        <div class="w-[80%] mx-auto mb-8">
+          <p>{{page.inside-the-course.description_html}}</p>
+        </div>
+    </div>
+    <ul class="dropdown-menu">
+        {% for item in page.inside-the-course.module %}
+        <li x-data="{ open: false }" class="dropdown-item {% if forloop.last %}last-item {% endif %}">
+            <button @click="open = ! open" class="flex justify-between w-full">
+                <h3 class="mr-8 text-left">{{item.title}}</h3>
+
+                <span x-show="!open">→</span>
+                <span x-show="open">&nbsp;&nbsp;↓</span>
+            </button>
+            <div x-show="open" @click.outside="open = false" class="flex justify-between">
+                <div class="justify-start">
+                    <p><em>{{ item.description_html | safe }}</em></p>
+                </div>
+                {% if item.time.show == true %}
+                <div class="justify-end">({{item.time.hours}}:{{item.time.minutes}})</div>
+                {% endif %}
+            </div>
+        </li>
+        {% endfor %}
+    </ul>
+    <div class="text-center mt-8">
+        <a href="{{page.heading.button-enroll.url}}" class="button">{{page.heading.button-enroll.text}}</a>
+    </div>
+</section>
 
 <!-- Testimonials -->
 {% include testimonials.html %}
@@ -313,12 +221,6 @@ seo:
 {% if page.video.show == true %}
 {% include about-mana-course.html %}
 {% endif %}
-
-<!-- Investment -->
-{% include investment.html %}
-
-<!-- FAQ -->
-{% include faq.html %}
 
 <!-- CTA -->
 {% include cta-course.html %}
