--- a/theartofdancinglife.html
+++ b/theartofdancinglife.html
@@ -5,7 +5,7 @@ title: The Art of Dancing Life
 description_html: >-
   <p>The Art of Dancing Life is a 2-Day Liberation Through Movement
     Virtual Masterclass with Mana Mei.</p>
-featured-image: /uploads/images/manamei-27.jpg
+featured-image: /uploads/images/manamei-72.jpg
 heading:
   title: The Art of Dancing Life
   subtitle: 2-Day Liberation Through Movement Virtual Masterclass
@@ -18,8 +18,8 @@ heading:
     type: youtube
     text: Watch the video
     url: https://www.youtube.com/embed/5sEVM981_X0?si=8lwzWDFyemeUsPqJ
-  background_image: /uploads/images/manamei-27.jpg
-  overlay_style: medium
+  background_image: /uploads/images/manamei-72.jpg
+  overlay_style: light
 course-description:
   heading: The Art of Dancing Life is a Masterclass for Women
   description_html: >-
@@ -30,9 +30,9 @@ who-its-for:
   heading: This 2-day masterclass is for
   description_html: Any woman who is ready to live her life as a beautiful masterpiece</p><p>Women looking to gain self-awareness, applicable tools, and personal rituals to align with a satisfying and beauty-filled life</p><p>Those who want to meet each day with a sense of limitless potential and the anchored feeling of “Damn, I’m doing life really good”</p>
   background-image:
-    background_image: /uploads/images/manamei-54.jpg
+    background_image: /uploads/images/manamei-77.jpg
     image_focus: center
-    overlay_style: dark
+    overlay_style: light
 inside-the-course:
   heading: Schedule
   description_html: Each session will last between 2-3 hours. We recommend highly recommend being present for the entire duration to gain the most from the masterclass.</p>If you can’t join us live, you’ll have access to a replay for 7 days.
@@ -93,9 +93,9 @@ cta:
     url: >-
       https://manamei.teachable.com/p/mana-movement-sales
   background-image:
-    background_image: /uploads/images/manamei-53.jpg
+    background_image: /uploads/images/manamei-80.jpg
     background-position: center
-    overlay_style: dark
+    overlay_style: light
 seo: 
   title: The Art of Dancing Life - 2 Day Masterclass with Mana Mei
   description: Discover the Mana Movement full course, designed to reconnect women with their innate feminine energy through feminine embodiment. Unleash your creative potential and find peace, clarity, and inspiration through this transformative dance practice.
@@ -169,14 +169,14 @@ seo:
     </div>
 
     <!-- Right Column (image) -->
-     <div class="bg-image-style min-h-[60vh]" style="background-image: url('/uploads/images/manamei-27.jpg');"></div>
+     <div class="bg-image-style min-h-[60vh]" style="background-image: url('/uploads/images/manamei-73.jpg');"></div>
   </div>
 
   <!-- Second Row -->
    <div class="grid grid-cols-3">
 
     <!-- Left Column (image) -->
-    <div class="col-span-2 bg-image-style min-h-[60vh]" style="background-image: url('/uploads/images/manamei-27.jpg');"></div>
+    <div class="col-span-2 bg-image-style min-h-[60vh]" style="background-image: url('/uploads/images/manamei-7.jpg');"></div>
 
    <!-- Right Column (text) -->
     <div class="p-10p">
