--- a/theartofdancinglife.html
+++ b/theartofdancinglife.html
@@ -146,7 +146,7 @@ seo:
   <h2 class="hidden lg:block font-serif text-[3rem] leading-[1em] text-feature relative left-[5%] top-20">What you'll
       experience...</h2>
 
-  <div class="grid lg:grid-cols-3">
+  <div class="lg:grid lg:grid-cols-3">
 
       <!-- Left Column (text) -->
       <div class="lg:col-span-2 p-10p order-last lg:order-first">
@@ -179,7 +179,7 @@ seo:
 <!-- What You'll Get -->
 <section>
 
-  <div class="grid lg:grid-cols-2 gap-10p m-10p">
+  <div class="lg:grid lg:grid-cols-2 gap-10p m-10p">
 
       <!-- Left Column (image) -->
       <div class="bg-image-style min-h-[60vh]" style="background-image: url('/uploads/images/manamei-7.jpg');"></div>
