--- a/theartofdancinglife.html
+++ b/theartofdancinglife.html
@@ -99,9 +99,9 @@ cta:
     overlay_style: medium
 seo: 
   title: The Art of Dancing Life - 2 Day Masterclass with Mana Mei
-  description: Discover the Mana Movement full course, designed to reconnect women with their innate feminine energy through feminine embodiment. Unleash your creative potential and find peace, clarity, and inspiration through this transformative dance practice.
+  description: The Art of Dancing Life is a 2-Day Liberation Through Movement Virtual Masterclass with Mana Mei who want to meet each day with a sense of limitless potential and the anchored feeling of “Damn, I’m doing life really good”
   keywords: Mana Movement, feminine energy, intuitive dance, creative potential, embodied movement, embodied liberation
-  social_image: /uploads/images/manamei-27.jpg
+  social_image: /uploads/images/manamei-72.jpg
   hide-from-google: true
 ---
 <!-- Course Heading -->
