--- a/theartofdancinglife.html
+++ b/theartofdancinglife.html
@@ -179,10 +179,10 @@ seo:
 <!-- What You'll Get -->
 <section>
 
-  <div class="grid lg:grid-cols-2 gap-10p m-10p">
+  <div class="lg:grid lg:grid-cols-2 gap-5p lg:gap-10p mb-10p mx-10p lg:mt-10p">
 
       <!-- Left Column (image) -->
-      <div class="bg-image-style min-h-[60vh]" style="background-image: url('/uploads/images/manamei-7.jpg');"></div>
+      <div class="mb-10p lg:mb-0 bg-image-style min-h-[60vh]" style="background-image: url('/uploads/images/manamei-7.jpg');"></div>
 
       <!-- Right Column (text) -->
       <div class="p-10p border border-feature">
@@ -214,7 +214,7 @@ seo:
     style="background-image: url('{{page.inside-the-course.background-image.background_image}}'); background-position: {{page.inside-the-course.background-image.image_focus}};">
     <div class="text-center">
         <h2 class="text-lg-serif text-feature">{{page.inside-the-course.heading}}</h2>
-        <div class="w-[80%] mx-auto mb-8">
+        <div class="md:w-[80%] mx-auto mb-8">
           <p>{{page.inside-the-course.description_html}}</p>
         </div>
     </div>
