--- a/theartofdancinglife.html
+++ b/theartofdancinglife.html
@@ -5,7 +5,7 @@ title: The Art of Dancing Life
 description_html: >-
   <p>The Art of Dancing Life is a 2-Day Liberation Through Movement
     Virtual Masterclass with Mana Mei.</p>
-featured-image: /uploads/images/manamei-72.jpg
+featured-image: /uploads/images/manamei-74.jpg
 heading:
   title: The Art of Dancing Life
   subtitle: 2-Day Liberation Through Movement Virtual Masterclass
@@ -18,11 +18,11 @@ heading:
     type: youtube
     text: Watch the video
     url: https://www.youtube.com/embed/5sEVM981_X0?si=8lwzWDFyemeUsPqJ
-  background_image: /uploads/images/manamei-72.jpg
+  background_image: /uploads/images/manamei-74.jpg
   image_focus: 45% 50%
-  overlay_style: medium
+  overlay_style: light
 course-description:
-  heading: The Art of Dancing Life is a Masterclass for Women
+  heading: What is the The Art of Dancing Life?
   description_html: >-
     <p>Wouldn’t it be so cool to wake up every single day and be able to think to yourself, <em>“Damn, I’m doing this whole LIFE thing really good.”</em>?</p>
     <p>Living life to its fullest and creating a satisfying experience for yourself is an ART. The facets of your Life journey must be crafted and curated with <strong>attention & intention</strong>. This finely curated masterpiece of life can only be achieved through a deep level of AWARENESS, not only to your outer environment, but also, first and foremost to your <strong>INNER LANDSCAPE</strong>.</p>
@@ -108,22 +108,31 @@ seo:
 {% include hero-banner-course.html %}
 
 <!-- Course Description -->
-<section class="pt-10p px-10p pb-5p bg-image-style bg-overlay {{page.course-description.background-image.overlay_style}}" style="background-image: url('{{page.course-description.background-image.background_image}}'); background-position: {{page.course-description.background-image.image_focus}};">
+<!-- <section class="pt-10p px-10p pb-5p bg-image-style bg-overlay {{page.course-description.background-image.overlay_style}}" style="background-image: url('{{page.course-description.background-image.background_image}}'); background-position: {{page.course-description.background-image.image_focus}};">
   <h2 class="text-lg-serif text-feature">{{page.course-description.heading}}</h2>
   <div class="mb-12 md:w-[80%]">
       <p>{{page.course-description.description_html}}</p>
-  </div>
-  {% for item in page.course-description.module %}
-  <div class="flex mb-12">
-      <img src="{{item.image_path}}" class="h-16 mr-4">
-      <div class="col-span-4">
-          <h3 class="text-md-serif text-feature">{{item.title}}</h3>
-          <div>
-              <p>{{item.description_html}}</p>
-          </div>
-      </div>
-  </div>
-  {% endfor %}
+  </div> -->
+
+<section class="py-10p">
+<div class="px-10p w-[70%]">
+  <h2 class="text-lg-serif text-feature">What is The Art of Dancing Life?</h2>
+  <p>Wouldn’t it be so cool to wake up every single day and be able to think to yourself, <em>“Damn, I’m doing this whole LIFE thing really good.”</em>?</p>
+  <div class="mt-12 bg-image-style min-h-[90vh] bg-[bottom]" style="background-image: url(/uploads/images/manamei-81.jpg);"></div>
+</div>
+
+<div class="p-10p">
+  <p>Living life to its fullest and creating a satisfying experience for yourself is an ART. The facets of your Life journey must be crafted and curated with <strong>attention & intention</strong>. This finely curated masterpiece of life can only be achieved through a deep level of AWARENESS, not only to your outer environment, but also, first and foremost to your <strong>INNER LANDSCAPE</strong>.</p>
+</div>
+
+<div class="bg-image-style min-h-[70vh]" style="background-image: url(/uploads/images/manamei-76.jpg);"></div>
+</div>
+
+<div>
+  <p>Then, we use the <strong>BODY</strong> as a vessel to bridge the potential of our inner wonderland into the lived experience of our outer world- manifested through our actions,  movements, words, and moment-to-moment choices.</p>
+  <p>Through meeting life in this way, choosing from felt-body awareness at every breath, life unfolds into a radiant <span class="font-serif text-[1.5rem]">dance</span>. We feel, then we move. We breathe, then we respond. Swaying and undulating to the luscious rhythm of our Heart and the melody of our awakened Spirit.</p>
+</div>
+  
 </section>
 
 <!-- Who It's For -->
